# equifiz-pulse

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily-pulse.yml
n8n-flows/: README.md  linkedin.json  telegram.json
scripts/: deploy-vps.sh
src/pulse/: briefing.py  cli.py  models.py  observability.py  smoke.py
src/pulse/data/: cache.py  flows.py  indices.py  macro.py  movers.py  news.py  nse_client.py  regulatory.py
src/pulse/distribute/: __init__.py  n8n.py
src/pulse/format/: __init__.py  common.py  linkedin.py  news.py  telegram.py  whatsapp.py
tests/: conftest.py  test_distribute.py  test_flows.py  test_format.py  test_indices.py  test_macro.py  test_movers.py  test_news.py  test_observability.py  test_regulatory.py
tests/fixtures/: news_rss.xml  nse_allindices.json  nse_fii_dii_cash.json  nse_historical_eq.json  nse_nifty500.json  rbi_press_releases.xml  yahoo_chart.json  yahoo_chart_volume.json
