[project]
name = "equifiz-pulse"
version = "0.1.0"
description = "Daily Indian markets briefing — generates and pushes to LinkedIn / Telegram / WhatsApp via n8n."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "click>=8.1",
    "tzdata>=2024.1; platform_system == 'Windows'",
]

[project.scripts]
pulse = "pulse.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pulse"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: hits the real NSE API (skipped by default; run with -m live)",
]
addopts = "-m 'not live'"
